--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.4",
     "material-ui-image": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
