--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.4",
     "material-ui-image": "^3.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
@@ -31,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
