--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/material": "^5.13.3",
+    "@mui/material": "^5.14.2",
+    "@mui/x-data-grid": "^6.10.2",
     "@react-oauth/google": "^0.9.0",
     "@react-pdf/renderer": "^3.1.10",
     "@reduxjs/toolkit": "^1.9.3",
