--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "antd": "^5.6.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "file-server": "^2.2.1",
     "firebase": "^9.18.0",
     "formik": "^2.4.2",
     "gapi-script": "^1.2.0",
