--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.10",
+    "swiper": "^11.1.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
