--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# REACT_APP_BACKEND_URL=http://localhost:3004/api
-# VITE_API_URL = http://localhost:3004/api
+REACT_APP_BACKEND_URL=http://localhost:3004/api
+VITE_API_URL = http://localhost:3004/api
 
 VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 
 
 #Produccion
- REACT_APP_BACKEND_URL=https://api.carwashymas.com/api
- VITE_API_URL =https://api.carwashymas.com/api      
+#  REACT_APP_BACKEND_URL=https://api.carwashymas.com/api
+#  VITE_API_URL =https://api.carwashymas.com/api      
