--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.10.2",
+    "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.9.0",
     "@react-pdf/renderer": "^3.1.10",
     "@reduxjs/toolkit": "^1.9.3",
