--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^4.5.8",
+    "@headlessui/react": "^2.1.2",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.14.12",
@@ -25,7 +27,9 @@
     "@react-oauth/google": "^0.9.0",
     "@react-pdf/renderer": "^3.1.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "@remixicon/react": "^4.2.0",
     "@sweetalert2/theme-material-ui": "^5.0.15",
+    "@tremor/react": "^3.17.4",
     "animate.css": "^4.1.1",
     "antd": "^5.6.1",
     "axios": "^1.3.4",
@@ -62,9 +66,13 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "vite": "^4.1.0"
   },
   "rnpm": {
