--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remixicon/react": "^4.2.0",
     "@sweetalert2/theme-material-ui": "^5.0.15",
     "@tremor/react": "^3.17.4",
+    "@yudiel/react-qr-scanner": "^2.0.4",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
