--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 #Produccion
 #  REACT_APP_BACKEND_URL=https://api.carwashymas.com/api
 #  VITE_API_URL =https://api.carwashymas.com/api
+
+#  REACT_APP_BACKEND_URL=https://testapi.carwashymas.com/api
+#  VITE_API_URL =https://testapi.carwashymas.com/api
