--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mui-image": "^1.0.7",
     "mui-tel-input": "^3.2.2",
     "notistack": "^3.0.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
