--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_BACKEND_URL=http://localhost:3004/api
 VITE_API_URL = http://localhost:3004/api
-
+VITE_API_SOCKET =http://localhost:3004
 VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 
 
