--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 
 #  REACT_APP_BACKEND_URL=https://testapi.carwashymas.com/api
 #  VITE_API_URL =https://testapi.carwashymas.com/api
+# VITE_API_SOCKET =https://testapi.carwashymas.com/api
