map ready to point

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# REACT_APP_BACKEND_URL=http://localhost:3004/api
-# VITE_API_URL = http://localhost:3004/api
-# VITE_API_SOCKET =http://localhost:3004
+REACT_APP_BACKEND_URL=http://localhost:3004/api
+VITE_API_URL = http://localhost:3004/api
+VITE_API_SOCKET =http://localhost:3004
 VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 
 
@@ -8,6 +8,6 @@ VITE_REACT_APP_MAP_KEY=AIzaSyD7HfdUOFBcaGFd3hfS-MQr4X5Qi8hTGCo
 #  REACT_APP_BACKEND_URL=https://api.carwashymas.com/api
 #  VITE_API_URL =https://api.carwashymas.com/api
 
- REACT_APP_BACKEND_URL=https://testapi.carwashymas.com/api
- VITE_API_URL =https://testapi.carwashymas.com/api
-VITE_API_SOCKET =https://testapi.carwashymas.com/api
+#  REACT_APP_BACKEND_URL=https://testapi.carwashymas.com/api
+#  VITE_API_URL =https://testapi.carwashymas.com/api
+# VITE_API_SOCKET =https://testapi.carwashymas.com/api
