--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.14.12",
-    "@mui/lab": "^5.0.0-alpha.127",
-    "@mui/material": "^5.15.19",
+    "@mui/lab": "^5.0.0-alpha.174",
+    "@mui/material": "^6.2.1",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-charts": "^7.11.0",
-    "@mui/x-data-grid": "^7.21.0",
+    "@mui/system": "^6.2.1",
+    "@mui/x-charts": "^7.23.0",
+    "@mui/x-data-grid": "^7.23.0",
     "@mui/x-data-grid-generator": "^7.21.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.9.0",
@@ -66,7 +67,7 @@
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.10",
-    "swiper": "^11.1.1",
+    "swiper": "^11.1.15",
     "yup": "^1.2.0"
   },
   "devDependencies": {
