--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.0",
-    "@mui/icons-material": "^5.14.12",
+    "@mui/icons-material": "^5.16.13",
     "@mui/lab": "^5.0.0-alpha.174",
     "@mui/material": "^6.2.1",
     "@mui/styled-engine-sc": "^5.12.0",
@@ -48,7 +48,9 @@
     "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "libphonenumber-js": "^1.11.17",
     "mui-image": "^1.0.7",
+    "mui-tel-input": "^7.0.0",
     "notistack": "^3.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
