--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.44.3",
     "react-loader-spinner": "^5.3.4",
     "react-pdf": "^7.1.2",
