--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.10",
     "swiper": "^11.1.15",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "@mui/x-date-pickers": "^6.19.0",
+    "use-debounce": "^10.0.2",
+    "react-geocode": "*"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
