--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@remixicon/react": "^4.2.0",
     "@sweetalert2/theme-material-ui": "^5.0.15",
+    "@toolpad/core": "^0.12.0",
     "@yudiel/react-qr-scanner": "^2.0.4",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
