--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/x-charts": "^7.23.0",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-data-grid-generator": "^7.21.0",
+    "@mui/x-date-pickers": "^6.19.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.9.0",
     "@react-pdf/renderer": "^3.1.10",
@@ -56,6 +57,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-geocode": "*",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.44.3",
     "react-loader-spinner": "^5.3.4",
@@ -69,11 +71,10 @@
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.10",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.1.15",
-    "yup": "^1.2.0",
-    "@mui/x-date-pickers": "^6.19.0",
     "use-debounce": "^10.0.2",
-    "react-geocode": "*"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
