--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/x-charts": "^7.23.0",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-data-grid-generator": "^7.21.0",
+    "@mui/x-date-pickers": "^7.24.1",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.9.0",
     "@react-pdf/renderer": "^3.1.10",
