--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.11.17",
+    "match-sorter": "^8.0.0",
     "mui-image": "^1.0.7",
     "mui-tel-input": "^7.0.0",
     "notistack": "^3.0.1",
